[project]
name = "hermes-memory-tencentdb-plugin"
version = "0.1.0"
description = "Hermes memory provider adapter for the memory-tencentdb Gateway."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
